; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_expandeddatum.c_DeleteExpandedObject.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_expandeddatum.c_DeleteExpandedObject.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DeleteExpandedObject(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.TYPE_3__* @DatumGetEOHP(i32 %4)
  store %struct.TYPE_3__* %5, %struct.TYPE_3__** %3, align 8
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @DatumGetPointer(i32 %6)
  %8 = call i32 @VARATT_IS_EXTERNAL_EXPANDED_RW(i32 %7)
  %9 = call i32 @Assert(i32 %8)
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @MemoryContextDelete(i32 %12)
  ret void
}

declare dso_local %struct.TYPE_3__* @DatumGetEOHP(i32) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @VARATT_IS_EXTERNAL_EXPANDED_RW(i32) #1

declare dso_local i32 @DatumGetPointer(i32) #1

declare dso_local i32 @MemoryContextDelete(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
